--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "react-image-gallery",
-  "version": "0.8.8",
+  "version": "0.8.9",
   "description": "React carousel image gallery component with thumbnail and mobile support",
-  "main": "./build/image-gallery.js",
+  "main": "./build",
   "scripts": {
     "start": "gulp dev",
     "build": "gulp build",
